--- a/what-job-react/package.json
+++ b/what-job-react/package.json
@@ -8,9 +8,9 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
-
+    "rehype-sanitize": "^5.0.1",
     "cors": "^2.8.5",
-
+    "@uiw/react-md-editor": "^3.9.4",
     "immutable": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
