--- a/whatJobRailsAPI/Gemfile
+++ b/whatJobRailsAPI/Gemfile
@@ -31,7 +31,7 @@ gem 'devise'
 gem 'devise-jwt'
 
 # for feature testing
-# gem 'capybara'
+gem 'capybara'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
