--- a/what-job-react/package.json
+++ b/what-job-react/package.json
@@ -7,15 +7,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.25.0",
-    "rehype-sanitize": "^5.0.1",
-    "cors": "^2.8.5",
     "@uiw/react-md-editor": "^3.9.4",
+    "axios": "^0.25.0",
+    "cors": "^2.8.5",
+    "form-data": "^4.0.0",
     "immutable": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "rehype-sanitize": "^5.0.1",
     "slate": "^0.72.3",
     "slate-react": "^0.72.7",
     "web-vitals": "^2.1.4"
