Current passing tests for multiple pages of app

--- a/what-job-react/package.json
+++ b/what-job-react/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -44,5 +44,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-axe": "^5.0.1",
+    "msw": "^0.36.8"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
